# onlybirds

./: .env.example  .gitignore  .pre-commit-config.yaml  Brewfile  README.md  deployment_ideas.md  justfile  pyproject.toml  streamlit_app.py
.claude/: launch.json
dashboard/: app.py
life-lists/: 05-07-2026.csv  05-08-2026.csv  05-15-2026.csv
src/onlybirds/: __init__.py  cli.py  consolidate.py  db.py  ebird.py  ebird_id.py  embeddings.py  enrich.py  hotspots.py  ingest.py  rare.py  seasonality.py  semantic_search.py  targets.py  taxonomy.py
src/onlybirds/dashboard/: __init__.py  app.py  compare.py  compare_client.py  data.py  markers.py  mini_map.py  regions.py  semantic_widget.py  styles.py  targets_view.py  types.py  urls.py  utils.py  views.py
tests/: conftest.py  test_consolidate.py  test_ebird_id.py  test_embeddings.py  test_seasonality.py  test_semantic_search.py  test_targets.py  test_taxonomy.py
