[project]
name = "onlybirds"
version = "0.1.0"
description = "Find birds you haven't seen yet at nearby eBird hotspots, with rare-bird flags and Wikipedia enrichment."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "pandas>=2.2",
    "rapidfuzz>=3.9",
    "streamlit>=1.36",
    "streamlit-folium>=0.20",
    "folium>=0.16",
    "wikipedia-api>=0.6",
    "platformdirs>=4.2",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[project.scripts]
onlybirds = "onlybirds.cli:app"

[dependency-groups]
dev = [
    "ty",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onlybirds"]
